2008-06-04  0.50 - H.Merijn Brand   <h.m.brand@xs4all.nl>

	* Skip a few tests in automated testing, as they confuse
	  reports. This is important for the automated sites that
	  mark modules as fail if it is not an obvious full PASS
	* 0.46 caused the last still open RT bug to be closed!
	* Tested on 5.11.0, 5.10.0, 5.8.8, 5.6.2, and 5.005_04,
	  Strawberry and Cygwin

2008-06-04  0.46 - H.Merijn Brand   <h.m.brand@xs4all.nl>

	* In examples add die on failed close calls
	* Use Test::MinimumVersion (not distributed)
	* Added option -F to examples/csv2xls
	* More source code cleanup
	* Nailed the UTF-8 issues for parsing
	* Nailed the UTF-8 issues for combining

2008-04-23  0.45 - H.Merijn Brand   <h.m.brand@xs4all.nl>

	* Forgot to pack examples/parser-xs.pl

2008-04-23  0.44 - H.Merijn Brand   <h.m.brand@xs4all.nl>

	* Fixed the error position returned as third arg in error_diag ()
	* Made examples/csv-check use this even more vebose
	* Removed double-double quote from TODO
	* Added examples/parse-xs.pl (attempt to fix bad CSV)

2008-04-21  0.43 - H.Merijn Brand   <h.m.brand@xs4all.nl>

	* parse errors try to remember failing position
	* used valgrind to test for leaks (devel-only)
	* used Test::Valgrind as alternative leak check (devel-only)
	* improve documentation for error 2023
	* nailed the loose quotes in quoted fields

2008-04-16  0.42 - H.Merijn Brand   <h.m.brand@xs4all.nl>

	* Generate META.yml myself. I won't use Build.PL
	* Array-refs now accept scalars with magic:
	  $csv->print (*STDOUT, $sth->{NAME_lc});
	* More/better examples
	* Added t/76_magic.t

2008-04-11  0.41 - H.Merijn Brand   <h.m.brand@xs4all.nl>

	* error_diag () subclassable
	* typo in bind_columns () docs
	* examples/csv2xls now uses getline ()
	* better test for getline in t/75_hashref.t (makamata)
	* document return value of getline () with bind_columns ()
	* add perl version prereq to META.yml

2008-04-07  0.40 - H.Merijn Brand   <h.m.brand@xs4all.nl>
