@@ -10,7 +10,7 @@ BEGIN {
 	plan skip_all => "UTF8 tests useless in this ancient perl version";
 	}
     else {
-	plan tests => 64;
+	plan tests => 67;
 	}
     }
 
@@ -20,8 +20,8 @@ BEGIN {
     require "t/util.pl";
     }
 
+# No binary => 1, as UTF8 is supposed to be allowed without it
 my $csv = Text::CSV_XS->new ({
-    binary         => 1,
     always_quote   => 1,
     keep_meta_info => 1,
     });
@@ -44,7 +44,7 @@ foreach my $test (
   #  characters in 128..255
   ) {
     my ($u, $msg) = @$test;
-    utf8::encode ($u);
+    ($u = "$u\x{0123}") =~ s/.$//;	# Make sure it's marked UTF8
     my @in  = ("", " ", $u, "");
     my $exp = join ",", map { qq{"$_"} } @in;
 
@@ -61,6 +61,11 @@ foreach my $test (
 	is_binary ($in[$_], $out[$_],	"field $_ $msg");
 	}
     }
+
+# Test if the UTF8 part is accepted, but the \n is not
+is ($csv->parse (qq{"\x{0123}\n\x{20ac}"}), 0, "\\n still needs binary");
+is ($csv->binary, 0, "bin flag still unset");
+is ($csv->error_diag + 0, 2021, "Error 2021");
 
 # As all utf tests are skipped for older pers, It's safe to use 3-arg open this way
 my $file = "files/utf8.csv";
